--- a/css/style.css
+++ b/css/style.css
@@ -41,4 +41,15 @@ h1 {
     background-color: rgb(0, 0, 29);
     padding: 40px;
     color: white;
+    background-size:contain;
+    background-repeat: no-repeat;
+}
+
+.content1 {
+    background-image: url(../img/male1.png);
+}
+
+.descrizione {
+    margin-left:20px;
+    
 }
