--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,7 @@ h1 {
 
 .apertura {
     text-align: center;
-    font-size:medium;
+    font-size:1em;
     margin-bottom: 40px;
 }
 
@@ -31,6 +31,12 @@ h1 {
     background-color: aqua;
 }
 
+.row {
+    content: '';
+    display: table;
+    clear: both;
+}
+
 .col {
     float:left;
     margin: 15px;
@@ -39,17 +45,31 @@ h1 {
 
 .content {
     background-color: rgb(0, 0, 29);
-    padding: 40px;
     color: white;
-    background-size:contain;
-    background-repeat: no-repeat;
 }
 
-.content1 {
-    background-image: url(../img/male1.png);
+
+
+img {
+    width: 30%;
+    float: left;
 }
 
 .descrizione {
-    margin-left:20px;
-    
+    margin-left: 110px;
+    padding: 16px;
+}
+
+.name {
+    font-size: 1em;
+    font-weight: bold;
+    margin-bottom: 10px;
+}
+
+.role {
+    margin-bottom: 10px;
+}
+
+span {
+    display: inline-block;
 }
