--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,7 @@ body {
     background-color: rgb(255, 251, 245);
 }
 
+/* inizio header */
 h1 {
     color: rgb(221, 54, 152);
     text-align: center;
@@ -21,6 +22,7 @@ h1 {
     margin-bottom: 40px;
 }
 
+/* generali */
 .container {
     max-width: 1170px;
     margin: 0 auto;
@@ -28,7 +30,6 @@ h1 {
 
 .row {
     width: 100%;
-    background-color: aqua;
 }
 
 .row {
@@ -43,12 +44,15 @@ h1 {
     width: calc(100% / 3 - 30px)
 }
 
+span {
+    display: inline-block;
+}
+
+/* contenuto */
 .content {
     background-color: rgb(0, 0, 29);
     color: white;
 }
-
-
 
 img {
     width: 30%;
@@ -70,6 +74,6 @@ img {
     margin-bottom: 10px;
 }
 
-span {
-    display: inline-block;
+.contact {
+    color: aqua;
 }
